--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
           <img src="logo.png" alt="Product Logo" class="logo" height="150px">
           <section>
             <video width="300" controls>
-                <source src="Dbc Clip.mp4" type="video/mp4">
+                <source src="https://drive.google.com/file/d/14hXKxAb6khMK9B39dd0_yW9vrQ4ARwh5/view?usp=drive_link" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
