--- a/about.html
+++ b/about.html
@@ -24,10 +24,9 @@
           <img src="logo.png" alt="Product Logo" class="logo" height="150px">
           <section>
             <video width="300" controls>
-                <source src="https://drive.google.com/uc?export=download&id=1EUhHVrbGmmTzDCE1IsNIAdJ6jZ7AdrNn" type="video/mp4">
+                <source src="https://drive.google.com/uc?export=download&id=FILE_ID" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-
         </section>
         <h1>A video about one's story who persued becoming a dbc member.</h1>
           <div class="features-container">
