--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <img src="logo.png" alt="Product Logo" class="logo">
         <nav>
           <ul class="navbar">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="login.html">Logout</a></li>
