--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             const password = document.getElementById('password').value;
             
             // Check if the credentials match the predefined values
-            if (username === "admin" && password === "password") {
+            if (username === "admin@gmail.com" && password === "password") {
                 // Set the logged-in status in localStorage
                 localStorage.setItem('isLoggedIn', 'true');
                 
